# pydantic_config

./: LICENCE  README.md  pyproject.toml
assets/: generate_svgs.py
examples/: function_cli.py  nested_cli.py  simple_cli.py  train_config.json  train_config.toml  train_config.yaml
src/pydantic_cli/: __init__.py  nested_dict.py  parse.py
src/pydantic_config/: __init__.py  _ui.py  app.py  cli.py  error.py  errors.py  nested_dict.py  parse.py
tests/: saw_error_message.sh  test_cli.py  test_config_load.py  test_nested.py  test_nested_args.py  test_nested_dict.py  test_nesting.py  test_parse.py  test_semi_parse.py  test_to_pydantic.py  ui_testing.py
