[project]
name = "pydantic-config"
version = "0.2.0"
description = "cli and config for ml using pydantic"
authors = [
    { name = "Sami Jaghouar", email = "sami.jaghouar@gmail.com" }
]
dependencies = [
    "pydantic>=2.0.0",
    "rich",
]
readme = "README.md"
requires-python = ">= 3.10"


[project.optional-dependencies]
yaml = ["pyyaml"]
toml = ["tomli"]

[tool.ruff]
line-length = 120 

[tool.uv]
dev-dependencies = ["ruff==0.5.0", "pre-commit>=3.0.0","pytest>=7.0.0"]

