[project]
name = "pydantic_config"
version = "0.3.0"
description = "tyro-based CLI with TOML/YAML config file support for ML"
authors = [
    { name = "Sami Jaghouar", email = "sami.jaghouar@gmail.com" }
]
dependencies = [
    "pydantic>=2.0.0",
    "tyro>=1.0.0",
]
readme = "README.md"
requires-python = ">= 3.10"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.optional-dependencies]
yaml = ["pyyaml"]
toml = ["tomli"]
all = ["pyyaml", "tomli"]

[tool.ruff]
line-length = 120 

[dependency-groups]
dev = ["ruff==0.5.0", "pre-commit>=3.0.0", "pytest>=7.0.0"]

